--- a/index.html
+++ b/index.html
@@ -18,23 +18,26 @@
       background-color: #f7f9fc; /* Cor de fundo neutra */
       font-family: 'Poppins', sans-serif; /* Fonte divertida */
       text-align: center;
+      padding: 20px; /* Espaçamento interno */
+      box-sizing: border-box; /* Inclui padding no cálculo da largura */
     }
     h1 {
       color: #34495e; /* Azul escuro neutro */
       margin-bottom: 20px; 
       text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1); /* Sombra do texto */
-      font-size: 2.5em; /* Tamanho maior */
+      font-size: 2em; /* Tamanho ajustado */
       font-weight: 500; /* Peso da fonte */
     }
     textarea {
-      width: 500px; /* Aumentando a largura */
-      height: 200px; /* Aumentando a altura */
+      width: 100%; /* Largura total */
+      max-width: 500px; /* Limite máximo de largura */
+      height: 150px; /* Altura ajustada */
       padding: 10px; 
       border: 2px solid #bdc3c7; /* Borda cinza */
       border-radius: 8px; 
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
       margin-bottom: 10px; 
-      font-size: 16px; /* Aumentando o tamanho da fonte */
+      font-size: 16px; /* Tamanho da fonte */
       font-family: 'Poppins', sans-serif; /* Fonte no textarea */
       transition: border-color 0.3s, box-shadow 0.3s; /* Transição suave */
     }
