--- a/index.html
+++ b/index.html
@@ -6,73 +6,8 @@
   <script src="hello.js"></script>
   <link rel="stylesheet" href="style.css">
   <title>NeuroChat</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap" rel="stylesheet"> <!-- Fonte do Google -->
-  <style>
-    body {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 100vh; 
-      margin: 0;
-      background-color: #f7f9fc; /* Cor de fundo neutra */
-      font-family: 'Poppins', sans-serif; /* Fonte divertida */
-      text-align: center;
-      padding: 20px; /* Espaçamento interno */
-      box-sizing: border-box; /* Inclui padding no cálculo da largura */
-    }
-    h1 {
-      color: #34495e; /* Azul escuro neutro */
-      margin-bottom: 20px; 
-      text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1); /* Sombra do texto */
-      font-size: 2em; /* Tamanho ajustado */
-      font-weight: 500; /* Peso da fonte */
-    }
-    textarea {
-      width: 100%; /* Largura total */
-      max-width: 500px; /* Limite máximo de largura */
-      height: 150px; /* Altura ajustada */
-      padding: 10px; 
-      border: 2px solid #bdc3c7; /* Borda cinza */
-      border-radius: 8px; 
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
-      margin-bottom: 10px; 
-      font-size: 16px; /* Tamanho da fonte */
-      font-family: 'Poppins', sans-serif; /* Fonte no textarea */
-      transition: border-color 0.3s, box-shadow 0.3s; /* Transição suave */
-    }
-    textarea:focus {
-      border-color: #2980b9; /* Azul ao focar */
-      box-shadow: 0 0 10px rgba(41, 128, 185, 0.5); /* Sombra ao focar */
-      outline: none; /* Remove contorno padrão */
-    }
-    input[type="button"] {
-      padding: 12px 24px; /* Aumentando o tamanho do botão */
-      border: none; 
-      border-radius: 8px; 
-      background-color: #2980b9; /* Azul */
-      color: white; 
-      font-size: 16px; 
-      cursor: pointer; 
-      transition: background-color 0.3s, transform 0.2s; /* Transição suave */
-      font-weight: 500; /* Peso da fonte do botão */
-    }
-    input[type="button"]:hover {
-      background-color: #1a5987; /* Azul escuro ao passar o mouse */
-      transform: scale(1.05); /* Leve aumento ao passar o mouse */
-    }
-    label {
-      color: #34495e; /* Azul escuro neutro */
-      margin-top: 20px; /* Espaçamento acima do rótulo */
-      font-size: 1.2em; /* Tamanho maior */
-      font-weight: 400; /* Peso da fonte */
-    }
-    footer {
-      margin-top: 20px; 
-      color: #7f8c8d; /* Cinza */
-      font-size: 14px; 
-    }
-  </style>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap" rel="stylesheet"> 
+
 </head>
 <body>
   <h1>NeuroChat</h1>
