--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <textarea name="resposta" id="resposta" readonly></textarea>
 
   <footer>
-    <p>Autor: Cibely Jorge</p>
+    <p>Autora: Cibely Jorge</p>
   </footer>
 </body>
 </html>
