--- a/index.html
+++ b/index.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="hello.js"></script>
   <link rel="stylesheet" href="style.css">
   <title>NeuroChat</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap" rel="stylesheet"> 
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
 
 </head>
+
 <body>
   <h1>NeuroChat</h1>
   <textarea name="prompt" id="prompt" placeholder="Digite seu prompt aqui..."></textarea>
   <br>
-  <input type="button" value="Enviar" onclick="run()"/>
+  <input type="button" value="Enviar" id="botao_enviar" />
   <br>
   <br>
   <label for="resposta">Resposta de IA:</label>
@@ -24,6 +25,7 @@
     <p>Autora: Cibely Jorge</p>
   </footer>
 </body>
+
 </html>
 <script type="importmap">
   {
@@ -31,4 +33,31 @@
       "@google/generative-ai": "https://esm.run/@google/generative-ai"
     }
   }
+</script>
+<script type="module">
+  import { GoogleGenerativeAI } from "@google/generative-ai";
+
+  // Fetch your API_KEY
+  const API_KEY = "AIzaSyADID51Xqt_CDvL1fpkHVmOysANMp3U_L4";
+
+  // Access your API key (see "Set up your API key" above)
+  const genAI = new GoogleGenerativeAI(API_KEY);
+
+  const model = genAI.getGenerativeModel({ model: "gemini-1.5-flash" });
+
+  async function run() {
+    const prompt = "Você é neurologista e precisa me ajudar, e você fala apenas sobre neurologia"
+
+    const result = await model.generateContent(prompt);
+    const response = await result.response;
+    const text = response.text();
+    document.getElementById("resposta").value = text;
+    console.log(text);
+  }
+  const botao = document.getElementById('botao_enviar');
+  botao.addEventListener('click', function () {
+    run();
+  });
+  run();
+
 </script>
