--- a/index.html
+++ b/index.html
@@ -18,11 +18,13 @@
       height: 100vh;
       margin: 0;
       padding: 20px;
+      box-sizing: border-box;
     }
 
     h1 {
       color: #333;
       margin-bottom: 20px;
+      text-align: center;
     }
 
     .chat-container {
@@ -30,7 +32,8 @@
       border-radius: 10px;
       box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
       padding: 20px;
-      width: 400px;
+      width: 100%;
+      max-width: 500px; /* Maximum width */
       height: 400px;
       overflow-y: auto;
       display: flex;
@@ -72,11 +75,12 @@
       color: white;
       border: none;
       border-radius: 25px;
-      padding: 10px 20px;
-      font-size: 16px;
+      padding: 10px 18px; /* Increased padding */
+      font-size: 16px; /* Larger font size */
       cursor: pointer;
       transition: background-color 0.3s, transform 0.3s;
       margin-top: 10px;
+      width: auto; /* Allow the button to size based on content */
     }
 
     input[type="button"]:hover {
@@ -92,6 +96,26 @@
       margin-top: 20px;
       text-align: center;
       color: #666;
+    }
+
+    /* Media Queries */
+    @media (max-width: 600px) {
+      .chat-container {
+        height: 300px; /* Reduced height for smaller screens */
+      }
+
+      h1 {
+        font-size: 24px; /* Adjust heading size */
+      }
+
+      textarea {
+        height: 50px; /* Adjust textarea size */
+      }
+
+      input[type="button"] {
+        padding: 10px 16px; /* Adjust padding for smaller screens */
+        font-size: 16px; /* Adjust button font */
+      }
     }
   </style>
 </head>
